--- a/style/style-body.css
+++ b/style/style-body.css
@@ -1,12 +1,25 @@
+.border {
+    height: 1px;
+    width: 100%;
+    /* background-color: #ebebeb; */
+    background-color: #222222;
+    content: "";
+    display: flex;
+    margin-top: 119px;
+
+    /* position: absolute; */
+}
+
 main {
-    margin-top: 152px;
+    /* margin-top: 152px; */
     margin-bottom: 49px;
 }
 
 .section-con {}
 
 .section-name-con {
-    margin: 32px 32px 14px;
+
+    margin: 32.5px 32px 13.5px;
     justify-content: space-between;
     display: flex;
 
@@ -96,6 +109,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 8px;
+    position: relative;
 }
 
 .image-con {
@@ -109,6 +123,7 @@ main {
     width: 100%;
     height: 100%;
     position: relative;
+    aspect-ratio: 20/19;
 }
 
 .image-wrap img {
@@ -117,4 +132,83 @@ main {
     vertical-align: bottom;
     width: 100%;
     height: 100%;
+}
+
+.guest-con {
+    color: #222222;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 5.5px 9.5px;
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    border-radius: 24px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-image: initial;
+    box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.02), 0px 2px 6px 0px rgba(0, 0, 0, 0.04), 0px 4px 8px 0px rgba(0, 0, 0, 0.10);
+    font-weight: 600;
+    align-items: center;
+    font-family: 'font1';
+
+
+    /* font-family: "font1",Circular, -apple-system; */
+
+
+
+    height: fit-content;
+}
+
+.guest-con span {
+    line-height: 0.8125rem;
+    font-size: 0.6875rem;
+    display: flex;
+
+}
+
+.wish-btn {
+    padding-top: 2px;
+    position: absolute;
+    top: 10px;
+    right: 6px;
+    background: none;
+    border: none;
+}
+
+.des-con {
+    margin: 0 4px;
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+}
+
+.text-wrap {
+    font-size: 0.8125rem;
+    line-height: 1rem;
+}
+
+.text-div {
+    text-wrap: pretty;
+    overflow: clip;
+    font-weight: 500;
+    overflow-wrap: anywhere;
+    -webkit-line-clamp: 3;
+    text-overflow: ellipsis;
+    color: #222222;
+}
+
+.price-wrap {
+    line-height: 1rem;
+    font-size: .75rem;
+    flex-wrap: wrap;
+    color: #6a6a6a;
+    display: flex;
+
+}
+
+.rating-span {
+    display: flex;
+    gap: 2.5px;
+}
+
+.star-span {
+    margin-block: auto;
 }
