--- a/style/style-body.css
+++ b/style/style-body.css
@@ -70,6 +70,18 @@ main {
     align-items: center;
     border: none;
     cursor: not-allowed;
+    position: relative;
+}
+.bt1::before{
+    border: 1px solid #c1c1c1;
+    background-color: transparent;
+    content: "";
+    border-radius: 50%;
+    transform: translate(-50%,-50%); height: 24px;
+    width: 24px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
 }
 
 .bt2 {
@@ -81,6 +93,7 @@ main {
     justify-content: center;
     align-items: center;
     display: flex;
+   
 }
 
 .section-content-con {
@@ -211,4 +224,14 @@ main {
 
 .star-span {
     margin-block: auto;
+}
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    gap: 8px;
+}
+.fill{
+    fill: rgb(255, 56, 92) !important;
 }
