--- a/style/style-footer.css
+++ b/style/style-footer.css
@@ -18,6 +18,7 @@ footer {
     font-size: 1.375rem;
     font-weight: 500;
     letter-spacing: -.01375rem;
+    margin-bottom: 0;
 }
 
 .unique-head-wrap {
