--- a/style/style-footer.css
+++ b/style/style-footer.css
@@ -13,7 +13,7 @@ footer {
 }
 
 .unique-con h2 {
-    margin-bottom: 8px;
+    margin-bottom: 8px !important;
     line-height: 1.625rem;
     font-size: 1.375rem;
     font-weight: 500;
@@ -131,7 +131,7 @@ footer {
 }
 
 .footer-foot-con {
-    padding: 23.5px 0 24px;
+        padding: 24px 0 24px;
     border-top: 1px solid #ebebeb;
 }
 
