--- a/style/style-mobile.css
+++ b/style/style-mobile.css
@@ -104,7 +104,7 @@
         height: 80%;
         align-self: center;
         padding: 0 0 0 2px;
-        margin-left: 18px;
+        margin-left: 23px;
         text-decoration: none;
         color: black;
     }
@@ -203,7 +203,7 @@
     }
 
     .video-span-m {
-        height: 17px;
+        height: 36px;
         width: 36px;
         display: block;
     }
@@ -244,18 +244,19 @@
 
 
     .new-wrap-m {
-        padding: 3px 6px;
+        padding: 2px 6px 4px;
         font-size: 0.5rem;
         box-shadow: 0 0.953955px 1.90791px rgba(60, 77, 107, 0.25), 0 3.81582px 5.72373px rgba(60, 77, 107, 0.25), inset 0 0 2px 0.5px #001c40, inset 0 -1px 3px #d7ebff;
         background: linear-gradient(357.5deg, #3e567c 1.59%, #3a5475 21.23%, #2d3c5b 58.6%, #809dc0 97.4%);
         border-radius: 10px 10px 10px 2px;
         position: absolute;
         left: 100%;
-        top: -10px;
+        top: -5px;
         display: inline-block;
     }
 
     .new-wrap-m span {
+        /* transform: translateY(-6px); */
         line-height: 0.625rem;
         font-weight: 800;
         text-align: center;
@@ -263,6 +264,7 @@
         text-wrap: nowrap;
         color: #ffffff;
         position: relative;
+        /* padding-bottom: 15px; */
 
     }
 
